tests/ci/expected/0201-main-return-type.error.c.expected
ci/0201-main-return-type.error.c:1:1: error: return type of 'main' should be 'int'. (ยง5.1.2.2.1#1, 2nd sentence)
float main(void) { return 1.; }
~~~~~ ^
